force-app/main/default/objects/vf_TrainingModule__c/vf_TrainingModule__c.object-meta.xml
<CustomObject>
    <label>Training Module</label>
    <pluralLabel>Training Modules</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Module Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Object to store training module information</description>
</CustomObject>