force-app/main/default/objects/vf_TrainingModule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Detailed description of the training module</description>
    <inlineHelpText>Detailed description of what the training module covers</inlineHelpText>
</CustomField>