force-app/main/default/objects/vf_TrainingModule__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
                <default>true</default>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Difficulty level of the training module</description>
    <inlineHelpText>The difficulty level of this training module</inlineHelpText>
</CustomField>