force-app/main/default/objects/vf_TrainingModule__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <label>Duration (Minutes)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Duration of the training module in minutes</description>
    <inlineHelpText>The estimated time in minutes required to complete this training module</inlineHelpText>
</CustomField>