force-app/main/default/objects/vf_TrainingModule__c/fields/Optional_Roles__c.field-meta.xml
<CustomField>
    <fullName>Optional_Roles__c</fullName>
    <label>Optional Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of roles that benefit from this module but don't require it</description>
    <inlineHelpText>List of roles that benefit from but don't require this training module. Stored in JSON format.</inlineHelpText>
</CustomField>