force-app/main/default/objects/vf_TrainingModule__c/fields/Prerequisites__c.field-meta.xml
<CustomField>
    <fullName>Prerequisites__c</fullName>
    <label>Prerequisites</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of prerequisite modules</description>
    <inlineHelpText>List of modules that should be completed before this one. Stored in JSON format.</inlineHelpText>
</CustomField>