force-app/main/default/objects/vf_TrainingModule__c/fields/Required_Roles__c.field-meta.xml
<CustomField>
    <fullName>Required_Roles__c</fullName>
    <label>Required Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>JSON array of roles that require this module</description>
    <inlineHelpText>List of roles that require this training module. Stored in JSON format.</inlineHelpText>
</CustomField>