force-app/main/default/objects/vf_TrainingModule__c/fields/Skill_Category__c.field-meta.xml
<CustomField>
    <fullName>Skill_Category__c</fullName>
    <label>Skill Category</label>
    <length>100</length>
    <type>Text</type>
    <description>Category of skill this module teaches</description>
    <inlineHelpText>The category of skill this training module addresses</inlineHelpText>
</CustomField>